--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,18 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+    implementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'io.cucumber', name: 'cucumber-java8', version: '4.7.2'
+    implementation group: 'io.cucumber', name: 'cucumber-junit', version: '4.7.2'
+    implementation group: 'io.rest-assured', name: 'json-schema-validator', version: '4.3.1'
+    testImplementation group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.29'
+    testImplementation 'io.github.cdimascio:dotenv-kotlin:6.1.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+
 }
 
 compileKotlin {
