--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,10 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+  gradle: circleci/gradle@x.y
+version: 2.1
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  ophen-workflow:
     jobs:
-      - welcome/run
+      - gradle/test
+        store_artifacts: build/reports/
+        test_command: OhpenTests
+        test_results_path: build/test-results/cucumber-html-report.html/
