--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 workflows:
   ophen-workflow:
     jobs:
-      - gradle/check:
+      - gradle/test:
           context:
             - Ohpen
           test_results_path: build/test-results/cucumber-html-report.html/
